Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19054

Unable to upgrade MySQL5.7 to MariaDB on windows

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Blocker
    • Resolution: Fixed
    • 10.2.19
    • 10.2.24
    • Server
    • None
    • Windows Server 2016 / Plesk onyx 17.8 / MySQL5.7

    Description

      When trying to upgrade MySQL5.7 to MariaDB10.2 it seems unable to realize that MySQL5.7 is valid, if run from cli you get.
      C:\Program Files\MariaDB 10.2\bin>mysql_upgrade_service --service=MySQL57
      Phase 1/8: Changing service configuration
      FATAL ERROR: Not a valid MySQL service

      Attachments

        Activity

          People

            wlad Vladislav Vaintroub
            PureEnergy1991 Ben
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.