MDEV-19054 :  mysql_upgrade_service now allows MySQL 5.7 to MariaDB 10.2 upgrade.